Still unstable, but at least it starts (many features are disabled for the sake of stability)